--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,6 @@
 # remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
-
 # Site Settings
 locale                   : "ko-KR"
 title                    : "서요ગથ ኀዞ공타임"
@@ -33,7 +32,7 @@ words_per_minute         : 200
 comments:
   provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
   disqus:
-    shortname            : "서요ગથ ኀዞ공타임"
+    shortname            : "서요ગથ-ኀዞ공타임"
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
