댓글기능 리셋

--- a/_config.yml
+++ b/_config.yml
@@ -12,14 +12,14 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "dirt" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "서요이의 개공타임"
+title                    : "서요ગથ ኀዞ공타임"
 title_separator          : "|"
 subtitle                 : "　　　　ʕo•ᴥ•ʔ✎✉"
-name                     : "서요ગથ ኀዞ공타임"
+name                     : "서요ગᴵᴺᶠᴶ"
 description              : "📌오늘은 뭘 할까낭!"
 url                      : "https://cseo0dev.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -30,9 +30,9 @@ masthead_title           : # overrides the website title displayed in the masthe
 breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
 comments:
-  provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
+  provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
   disqus:
-    shortname            : "서요이의-개공타임"
+    shortname            : 
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
@@ -102,7 +102,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "서요ગથ ኀዞ공타임"
+  name             : "서요ગᴵᴺᶠᴶ"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "📌오늘은 뭘 할까낭!"
   location         : "Seoul, South Korea"
